# cpp-active-record

./: .clang-tidy  .gitignore  .rake-builder.ci  .travis.yml  DEVELOPMENT.md  EXAMPLE  Gemfile  INSTALL  INSTALL.md  MAINTENANCE.md  Makefile  Makefile.am  Makefile.in  README  README.md  Rakefile  TODO  config.h.in  configure  configure.ac
doc/: GETTING_STARTED  RATIONALE
examples/01_create_database/: .gitignore  README.md  Rakefile  main.cpp
examples/01_people/: Rakefile  main.cpp
examples/03_people/: README.md  Rakefile  main.cpp
include/active_record/: active_record.h  attribute.h  base.h  connection.h  conversions.h  date.h  exception.h  field.h  options.h  query.h  row.h  sqlite3_connection.h  table.h  table_data.h  table_set.h  type.h  types.h
include/active_record/connection/: postgresql.h  sqlite3.h
include/postgresql/: pg_config.h  pg_config_manual.h
include/postgresql/server/: c.h  port.h
include/postgresql/server/catalog/: pg_type.h
profiling/: 100000_greetings.cpp  Rakefile
src/: active_record.cpp  attribute.cpp  base.cpp  connection.cpp  conversions.cpp  exception.cpp  field.cpp  main.cpp  query.cpp  row.cpp  sqlite3_connection.cpp  table.cpp  table_set.cpp  type.cpp  types.cpp
src/attribute/: postgresql_attribute.cpp  sqlite3_attribute.cpp
src/connection/: postgresql_connection.cpp  sqlite3_connection.cpp
src/postgres/: postgresql_attribute.cpp  postgresql_connection.cpp  postgresql_row.cpp
src/row/: postgresql_row.cpp  sqlite3_row.cpp
src/sqlite/: sqlite3_attribute.cpp  sqlite3_connection.cpp  sqlite3_row.cpp  sqlite3_table.cpp
src/table/: sqlite3_table.cpp
test/: .gitignore  01_connection_test.cpp  01_database_creation_test.cpp  01_schema_test.cpp  01_table_data_test.cpp  01_table_test.cpp  02_attribute_test.cpp  02_class_setup_test.cpp  02_database_creation_test.cpp  03_attribute_test.cpp  03_connection_test.cpp  04_structure_update_test.cpp  Makefile  attribute_test.cpp  base_associations_test.cpp  base_attribute_test.cpp  base_test.cpp  connection_test.cpp  database_creation_test.cpp  date_test.cpp  exception_test.cpp  field_test.cpp  main.cpp  models.h  postgresql_attribute_test.cpp  postgresql_connection_test.cpp  postgresql_connection_test.h  postgresql_table_set_test.cpp  query_test.cpp  row_test.cpp  schema_test.cpp  sqlite3_connection_test.cpp  table_set_test.cpp  table_test.cpp  test_helper.cpp  test_helper.h
test/base/: associations.cpp  attributes.cpp  load.cpp  operators.cpp  save.cpp  setup.cpp  test.h  to_string.cpp
