AC_PREREQ(2.61)
AC_INIT(cpp-active-record, 0.7.0)
AC_CONFIG_SRCDIR([src/active_record.cpp])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([cpp-active-record], [0.7.0])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MEMCMP
AC_HEADER_STDC
AC_CHECK_FUNCS([memset strcasecmp])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
